--- a/app/views/account/integrations/stripe_installations/index.html.erb
+++ b/app/views/account/integrations/stripe_installations/index.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'account/shared/page' do |page| %>
   <% page.title t('.section') %>
-  <% page.body.render 'index', stripe_installations: @stripe_installations, hide_actions: @stripe_installations.present? %>
+  <% page.body.render 'index', stripe_installations: @stripe_installations %>
 <% end %>
