--- a/app/views/account/integrations/stripe_installations/index.html.erb
+++ b/app/views/account/integrations/stripe_installations/index.html.erb
@@ -1,6 +1,18 @@
 <% # Ejected from `bullet_train-integrations-stripe-1.3.17`. %>
 
-<%= render 'account/shared/page' do |page| %>
-  <% page.title t('.section') %>
-  <% page.body.render 'index', stripe_installations: @stripe_installations %>
-<% end %>
+
+<div class="space-y-8 py-4 xl:py-8 xl:px-8">
+  
+  <%- if is_onboarding ||= false %>
+
+    <%= render 'account/shared/workflow/box' do |box| %>
+      <%= box.body.render 'index', stripe_installations: @stripe_installations, hide_back: true, hide_footer: true, show_done: true %>
+    <% end %>
+
+  <%- else %>
+
+    <%= render 'index', stripe_installations: @stripe_installations %>
+
+  <% end %>
+
+</div>
