--- a/app/views/digest_mailer/digest.erb
+++ b/app/views/digest_mailer/digest.erb
@@ -564,7 +564,7 @@ ul {
               <tbody>
                 <tr>
                   <td align="center" class="mobile-pb20 mobile-pt30" style="padding: 10px 30px 40px;">
-                    <h2 class="chameleon-heading" style="text-align: center; Margin:0; margin:0; font-family:Arial, Helvetica, sans-serif; font-size:22px; line-height:28px; font-weight:400;color:#4b4b4b;"> Your Daily SaaS Pulse </h2>
+                    <h2 class="chameleon-heading" style="text-align: center; Margin:0; margin:0; font-family:Arial, Helvetica, sans-serif; font-size:22px; line-height:28px; font-weight:400;color:#4b4b4b;"> <%= @team_name %>'s Daily Pulse </h2>
                   </td>
                 </tr>
                 <tr>
