--- a/app/views/digest_mailer/_stat_with_list.erb
+++ b/app/views/digest_mailer/_stat_with_list.erb
@@ -4,7 +4,7 @@
       <tbody>
         <tr>
           <td align="center" class="mobile-pb30" style="padding-left: 11px; padding-right: 11px; padding-bottom: 40px;">
-            <table border="0" cellpadding="0" cellspacing="0" class="board chameleon-line" height="100%" style="border: 1px solid #bbdbff; border-radius: 8px;" width="100%">
+            <table border="0" cellpadding="0" cellspacing="0" class="board chameleon-line" height="100%" style="border-radius: 8px; background-color: #fff" width="100%">
               <tbody class="board__body">
                 <tr class="board__row">
                   <td class="board__cell" style="min-width: 174px; text-align: center;" valign="top" width="174">
