--- a/app/views/digest_mailer/_jumbotron.erb
+++ b/app/views/digest_mailer/_jumbotron.erb
@@ -16,7 +16,7 @@
                         <td align="center" valign="top" width="250">
                           <![endif]-->
                           <a href="https://saaspulse.io" target="_blank">
-                            <%= image_tag 'http://localhost:3000/assets/logo/logo-3f665335dcc5b54dba98fffc337525af4b5288c81bf2471415a14e491fd10971.png', style: "width: 50px" %>
+                            <%= image_tag 'https://165a-88-17-238-19.ngrok-free.app/assets/logo/logo-a12891d2c73d6d18dd2c1a90b72ae94ac85acb086b93aa489545e58a16a17aa2.png', style: "width: 75px" %>
                           </a>
 
                 <!--[if (gte mso 9)|(IE)]>
