--- a/app/views/digest_mailer/_customer_list.erb
+++ b/app/views/digest_mailer/_customer_list.erb
@@ -3,6 +3,7 @@
   <td align="right" width="65px" style="padding: 6px 4px">
     <span style="font-size: 14px; background: #fdfdbd; border-radius: 10px; padding: 4px 6px; font-weight: 400; color: #a09900">
       <%= number_to_currency(item.price_after_discount / 100) %>
+      <a href='#trials_ending_next_24_hrs'>Go</a>
     </span>
   </td>
   <td style="font-size: 14px; padding: 6px 0">
