--- a/app/views/digest_mailer/_stat_with_list.erb
+++ b/app/views/digest_mailer/_stat_with_list.erb
@@ -1,4 +1,4 @@
-<tr>
+<tr id=<%= anchor ||= '' %>>
   <td align="center" class="mp0x5" style="padding: 0 30px;">
     <table align="left" border="0" cellpadding="0" cellspacing="0" width="100%">
       <tbody>
