--- a/app/views/digest_mailer/_block.erb
+++ b/app/views/digest_mailer/_block.erb
@@ -3,20 +3,20 @@
   <tbody>
     <tr>
       <td align="" class="card-head" colspan="4" style="padding: 4px;">
-        <b class="card-heading" style="font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:22px; font-weight:500;color:#808080;">
+        <b class="card-heading" style="font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:22px; font-weight:300;color:#808080;">
           <%= title %>
         </b>
       </td>
     </tr>
     <tr>
       <td align="" style="padding: 4px;" colspan="4">
-        <b class="card-value chameleon-heading" style="font-family:Arial, Helvetica, sans-serif; font-size:32px; line-height:38px; font-weight:700;color:#065d8c;"> 
+        <b class="card-value chameleon-heading" style="font-family:Arial, Helvetica, sans-serif; font-size:32px; line-height:38px; font-weight:300;color:#065d8c;"> 
           <%= value %>
         </b>
       </td>
     </tr>
     <tr>
-      <td align="" style="padding: 4px;" colspan="2">
+      <td align="" style="padding: 4px;" colspan="4">
         <div class="change">
           <%= subValue1 ||= '' %>
           <span class="change-label">
@@ -24,12 +24,14 @@
           </span>
         </div>
       </td>
-      <td align="" style="padding: 4px;" colspan="2">
+    </tr>
+    <tr>
+      <td align="" style="padding: 4px;" colspan="4">
         <div class="change">
           <%= subValue2 ||= '' %>
-        </div>
-        <div class="change-label">
-          <%= subLabel2 ||= '' %>
+          <span class="change-label">
+            <%= subLabel2 ||= '' %>
+          </span>
         </div>
       </td>
     </tr>
