--- a/app/views/digest_mailer/digest.erb
+++ b/app/views/digest_mailer/digest.erb
@@ -537,18 +537,20 @@ ul {
       .change {
         color: #34a853;
         letter-spacing: 0.5px;
-        font-weight: bold;
         padding-bottom: 4px;
       }
 
       .change-label {
         color: gray;
-        font-weight: normal;
         font-size: 14px;
       }
     </style>
   </head>
-  <body class="emailbody" style="background-color: #f1f5f9; margin: 0; padding:0;">
+  <body class="emailbody" >
+  <table border="0" cellpadding="0" cellspacing="0" class="deviceWidth" style="background-color: #f1f5f9; margin: 0; padding:0;width:100%; min-width:100%;" width="100%">
+    <tbody>
+      <tr>
+        <td>
 
     <div style="display:none;font-size:1px;color:#ffffff;line-height:1px;font-family:Arial, Helvetica, sans-serif;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Your Daily SaaS Pulse</div>
 
@@ -581,16 +583,16 @@ ul {
                   </td>
                 </tr>
 
-                <%- block_mrr = render 'block', title: "MRR", value: number_to_currency(@content.mrr), subValue1: @content.new_mrr, subLabel1: 'last 24 hrs' %>
+                <%- block_mrr = render 'block', title: "MRR", value: number_to_currency(@content.mrr), subValue1: number_to_currency(@content.new_mrr), subLabel1: 'last 24 hrs' %>
                 <%- block_active_users = render 'block', title: "Active subscribers", value: @content.total_active_customers, subValue1: @content.new_active_customers, subLabel1: 'last 24 hrs' %>
                 <%= render partial: 'block_row', locals: { block1: block_mrr, block2: block_active_users  } %>
 
-                <%- block_active_trials = render 'block', title: "Active trials", value: @content.total_in_trial, subValue1: @content.new_in_trial, subLabel1: 'last 24 hrs', subValue2: '+$450.56', subLabel2: 'Est. value' %>
-                <%- block_trials_converting = render 'block', title: "Trials converting today", value: @content.trials_converting_today[:data].size, subValue1: number_to_currency(@content.trials_converting_today[:totalValue] / 100), subLabel1: 'Est. value' %>
+                <%- block_active_trials = render 'block', title: "Active trials", value: @content.total_in_trial, subValue1: @content.new_in_trial, subLabel1: 'last 24 hrs', subValue2: '+$450.56', subLabel2: '' %>
+                <%- block_trials_converting = render 'block', title: "Trials converting today", value: @content.trials_converting_today[:data].size, subValue1: number_to_currency(@content.trials_converting_today[:totalValue] / 100), subLabel1: '' %>
                 <%= render partial: 'block_row', locals: { block1: block_active_trials, block2: block_trials_converting } %>
 
-                <%- block_canceling = render 'block', title: "Accounts canceling", value: @content.canceled_recently[:data].size, subValue1: number_to_currency(@content.canceled_recently[:totalValue] / 100), subLabel1: 'Est. value' %>
-                <%- block_failing = render 'block', title: "Accounts overdue", value: @content.past_due[:data].size, subValue1: number_to_currency(@content.past_due[:totalValue] / 100), subLabel1: 'Est. value' %>
+                <%- block_canceling = render 'block', title: "Accounts canceling", value: @content.canceled_recently[:data].size, subValue1: number_to_currency(@content.canceled_recently[:totalValue] / 100), subLabel1: '' %>
+                <%- block_failing = render 'block', title: "Accounts overdue", value: @content.past_due[:data].size, subValue1: number_to_currency(@content.past_due[:totalValue] / 100), subLabel1: '' %>
                 <%= render partial: 'block_row', locals: { block1: block_canceling, block2: block_failing  } %>
 
                 <%= render 'stat_with_list', anchor: 'trials_ending_next_24_hrs', title: "Trials ending next 24 hrs", list: @content.trials_converting_today %>
@@ -621,6 +623,10 @@ ul {
  <!-- FIX FOR GMAIL iOS -->
     <div style="display:none; white-space:nowrap; font:15px courier; color:#ffffff;"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </div>
  <!-- FIX FOR GMAIL iOS -->
+        </td>
+      </tr>
+    </tbody>
+  </table>
   </body>
 </html>
 
