--- a/app/views/digest_mailer/_block.erb
+++ b/app/views/digest_mailer/_block.erb
@@ -1,37 +1,26 @@
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
   <tbody>
-    <tr>
+    <tr style="">
       <td align="" class="card-head" colspan="4" style="padding: 4px;">
-        <b class="card-heading" style="font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:22px; font-weight:300;color:#808080;">
+        <span class="card-heading" style="font-family:Helvetica, sans-serif; font-size:16px; line-height:22px; font-weight:100;color:#4b4b4b;">
           <%= title %>
-        </b>
+        </span>
       </td>
     </tr>
-    <tr>
+    <tr style="">
       <td align="" style="padding: 4px;" colspan="4">
-        <b class="card-value chameleon-heading" style="font-family:Arial, Helvetica, sans-serif; font-size:32px; line-height:38px; font-weight:300;color:#065d8c;"> 
-          <%= value %>
-        </b>
+        <span class="card-value chameleon-heading" style="font-family:Helvetica, sans-serif; font-size:36px; line-height:32px; font-weight:100;color:#065d8c;"><%= value %></span>
+        <span class="change <%= change_class(subValue1 ||= '') %>">
+          <%= subValue1.html_safe ||= '' %>
+        </span>
       </td>
     </tr>
-    <tr>
-      <td align="" style="padding: 4px;" colspan="4">
-        <div class="change">
-          <%= subValue1 ||= '' %>
-          <span class="change-label">
-            <%= subLabel1 ||= '' %>
-          </span>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <td align="" style="padding: 4px;" colspan="4">
-        <div class="change">
+    <tr style="">
+      <td align="" style="" colspan="4">
+        <div class="change-label ">
           <%= subValue2 ||= '' %>
-          <span class="change-label">
-            <%= subLabel2 ||= '' %>
-          </span>
+          <%= subLabel2 ||= '' %>
         </div>
       </td>
     </tr>
