--- a/app/views/digest_mailer/_stat_with_list.erb
+++ b/app/views/digest_mailer/_stat_with_list.erb
@@ -19,24 +19,28 @@
                             <table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto;">
                               <tbody>
                                 <tr>
-                                  <td class="stat-head" colspan="2" style="padding-bottom: 8px; text-align: center;">
-                                    <b class="stat-heading" style="font-family:Arial, Helvetica, sans-serif; font-size:13px; line-height:22px; font-weight:700;color:#A0A0A0;"> 
+                                  <td class="stat-head" colspan="6" style="padding-bottom: 8px; text-align: center;">
+                                    <span class="card-heading" style="font-family:Helvetica, sans-serif; font-size:16px; line-height:22px; font-weight:100;color:#4b4b4b;">
                                       <%= title %>
-                                    </b>
+                                    </span>
                                   </td>
                                 </tr>
-                                <tr style="text-align: center">
-                                  <td valign="top" width="38" colspan="2">
-                                    <b class="stat-value chameleon-heading" style="font-family:Arial, Helvetica, sans-serif; font-size:28px; line-height:32px; font-weight:700;color:#4b4b4b;">
+                                <tr style="">
+                                  <td width="50%">
+                                  </td>
+                                  <td width="25px" >
+                                    <span class="card-value chameleon-heading" style="font-family:Helvetica, sans-serif; font-size:36px; line-height:32px; font-weight:100;color:#065d8c;">
                                       <%= list[:data].length %>
-                                    </b>
+                                    </span>
+                                  </td>
+                                  <td width="50%" style="text-align: left; vertical-align: bottom">
+                                    <span class="change <%= change_class(list[:totalValue] ||= '') %>">
+                                      <%= currency_formatter(list[:totalValue] / 100).html_safe %>
+                                    </span>
                                   </td>
                                 </tr>
                               </tbody>
                             </table> <!--/stat -->
-                            <div style="border-radius:8px; margin: -57px 1px; color: #167ef44f; font-weight: 400; background: #dcf6dc; padding: 4px 6px; float:right;">
-                              <%= number_to_currency(list[:totalValue] / 100) %>
-                            </div>
                           </td>
                         </tr>
                       </tbody>
@@ -45,7 +49,7 @@
                   </td>
                 </tr>
                 <tr class="board__row">
-                  <td class="board__cell chameleon-line" style="border-top: 2px solid #E5E5E5;" valign="top" width="340">
+                  <td class="board__cell chameleon-line" style="border-top: 1px solid #E5E5E5;" valign="top" width="340">
 
                     <!-- right inner -->
                     <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -56,7 +60,7 @@
                               <tbody>
                                 <tr>
                                   <td>
-                                    <table width="100%">
+                                    <table width="100%" style="table-layout: fixed">
                                       <%= render partial: 'customer_list', collection: list[:data], as: :item %>
                                     </table>
                                   </td>
