--- a/app/views/digest_mailer/digest.erb
+++ b/app/views/digest_mailer/digest.erb
@@ -313,9 +313,10 @@ ul {
           max-width: 0 !important;
           min-width: 0 !important;
         }
-        .card-inner {
-          padding: 14px 0 11px !important;
-        }
+        <%# .card-inner { %>
+        <%#   padding: 14px 0 11px !important; %>
+        <%#   vertical-align: top; %>
+        <%# } %>
         .card-head {
           padding-bottom: 0 !important;
         }
@@ -537,12 +538,20 @@ ul {
       .change {
         color: #34a853;
         letter-spacing: 0.5px;
-        padding-bottom: 4px;
+        font-weight: 100;
       }
 
       .change-label {
-        color: gray;
+        color: #a6a6a6;
+        padding-left: 8px;
         font-size: 14px;
+        font-weight: 100;
+      }
+      .red {
+        color: red;
+      }
+      .green {
+        color: green;
       }
     </style>
   </head>
@@ -552,7 +561,7 @@ ul {
       <tr>
         <td>
 
-    <div style="display:none;font-size:1px;color:#ffffff;line-height:1px;font-family:Arial, Helvetica, sans-serif;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Your Daily SaaS Pulse</div>
+    <div style="display:none;font-size:1px;color:#ffffff;line-height:1px;font-family:Helvetica, sans-serif;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Your Daily SaaS Pulse</div>
 
     <div style="display: none; max-height: 0px; overflow: hidden; color:#ffffff;">  ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌  ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌  ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌  ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌  ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌  ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌  ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌  ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌ ‌  </div>
     <table align="center" border="0" cellpadding="0" cellspacing="0" class="deviceWidth" style="width:100%; min-width:100%;" width="100%">
@@ -583,22 +592,22 @@ ul {
                   </td>
                 </tr>
 
-                <%- block_mrr = render 'block', title: "MRR", value: number_to_currency(@content.mrr), subValue1: number_to_currency(@content.new_mrr), subLabel1: 'last 24 hrs' %>
-                <%- block_active_users = render 'block', title: "Active subscribers", value: @content.total_active_customers, subValue1: @content.new_active_customers, subLabel1: 'last 24 hrs' %>
-                <%= render partial: 'block_row', locals: { block1: block_mrr, block2: block_active_users  } %>
+                <%- block_mrr = render 'block', title: "MRR", value: number_to_currency(@content.mrr, precision: 0), subValue1: currency_formatter(@content.new_mrr), subLabel1: 'since yesterday' %>
+                <%- block_active_users = render 'block', title: "Active subscribers", value: @content.total_active_customers, subValue2: "+#{@content.new_active_customers}", subLabel2: 'since yesterday' %>
+                <%= render partial: 'block_row', locals: { block1: block_mrr, block2: block_active_users } %>
 
-                <%- block_active_trials = render 'block', title: "Active trials", value: @content.total_in_trial, subValue1: @content.new_in_trial, subLabel1: 'last 24 hrs', subValue2: '+$450.56', subLabel2: '' %>
-                <%- block_trials_converting = render 'block', title: "Trials converting today", value: @content.trials_converting_today[:data].size, subValue1: number_to_currency(@content.trials_converting_today[:totalValue] / 100), subLabel1: '' %>
+                <%- block_active_trials = render 'block', title: "Active trials", value: @content.total_in_trial, subValue2: "+#{@content.new_in_trial}", subLabel2: 'since yesterday', subValue1: currency_formatter('234'), subLabel1: '' %>
+                <%- block_trials_converting = render 'block', title: "Trials converting today", value: @content.trials_converting_today[:data].size, subValue1: currency_formatter(@content.trials_converting_today[:totalValue] / 100), subLabel1: '' %>
                 <%= render partial: 'block_row', locals: { block1: block_active_trials, block2: block_trials_converting } %>
 
-                <%- block_canceling = render 'block', title: "Accounts canceling", value: @content.canceled_recently[:data].size, subValue1: number_to_currency(@content.canceled_recently[:totalValue] / 100), subLabel1: '' %>
-                <%- block_failing = render 'block', title: "Accounts overdue", value: @content.past_due[:data].size, subValue1: number_to_currency(@content.past_due[:totalValue] / 100), subLabel1: '' %>
-                <%= render partial: 'block_row', locals: { block1: block_canceling, block2: block_failing  } %>
+                <%- block_canceling = render 'block', title: "Accounts canceling", value: @content.canceled_recently[:data].size, subValue1: currency_formatter((@content.canceled_recently[:totalValue] / 100) * -1), subLabel1: '' %>
+                <%- block_failing = render 'block', title: "Accounts overdue", value: @content.past_due[:data].size, subValue1: currency_formatter((@content.past_due[:totalValue] / 100) * -1), subLabel1: '' %>
+                <%= render partial: 'block_row', locals: { block1: block_canceling, block2: block_failing } %>
 
-                <%= render 'stat_with_list', anchor: 'trials_ending_next_24_hrs', title: "Trials ending next 24 hrs", list: @content.trials_converting_today %>
-                <%= render 'stat_with_list', title: "Trials ending after 24 hrs", list: @content.trials_converting_after_today %>
-                <%# <%= render 'stat_with_list', title: "Trials ending next 7 days", list: @content.trials_converting_next_7_days %>
-                <%# <%= render 'stat_with_list', title: "Trials ending after 7 days", list: @content.trials_converting_after_7_days %>
+                <%= render 'stat_with_list', title: "Trials", list: @content.trials_converting %>
+                <%# <%= render 'stat_with_list', title: "Trials ending today", list: @content.trials_converting_after_today %>
+                <%# <%= render 'stat_with_list', title: "Trials today", list: @content.trials_converting_next_7_days %>
+                <%# <%= render 'stat_with_list', title: "Trials today", list: @content.trials_converting_after_7_days %>
                 <%= render 'stat_with_list', title: "Trials converted last 24 hours", list: @content.conversions_last_24_hrs %>
                 <%= render 'stat_with_list', title: "Trials canceled last 24 hours", list: @content.canceled_recently %>
                 <%= render 'stat_with_list', title: "Past due", list: @content.past_due %>
