--- a/app/views/digest_mailer/_customer_list.erb
+++ b/app/views/digest_mailer/_customer_list.erb
@@ -1,13 +1,16 @@
 
 <tr style="color: #666">
 
-  <td style="width: 50%; font-size: 14px; padding: 0">
-    <a href="mailto:<%= item.stripe_customer.email %>" class="mobile-hide" style="padding: 0">
-      <%= item.stripe_customer.email %>
-    </a>
+  <td style="width: 100%; font-size: 14px; padding: 0">
+    <a href="mailto:<%= item.stripe_customer.email %>" style="padding: 0"><%= item.stripe_customer.email %></a>
+    <span style="font-size: 12px; color: #a6a6a6; padding: 0">
+      <% if(item.days_til_conversion) %>
+        in <%= item.days_til_conversion %> days
+      <% end %>
+    </span>
   </td>
 
-  <td style="width: 50%; text-align: right">
+  <td style="width: 80px; text-align: right">
     <span style="color: #a6a6a6; font-size: 13px">
       <div class="change <%= change_class(item.price_after_discount / 100) %>">
         <%= currency_formatter(item.price_after_discount / 100).html_safe %>
@@ -19,24 +22,9 @@
 
 <tr style="color: #666">
 
-  <td colspan="2" style="padding-bottom: 8px;" >
-
-    <table width="100%">
-      <tr>
-        <td style="width: 75px; font-size: 12px; color: #a6a6a6; padding: 0">
-          <span style="font-size: 12px; color: #a6a6a6; padding: 0">
-            <% if(item.days_til_conversion) %>
-              in <%= item.days_til_conversion %> days
-            <% end %>
-          </span>
-        </td>
-        <td style="font-size: 12px; color: #a6a6a6; padding: 0">
-          <%= coupon_string(item.discount) %>
-          <%#   <%= item.plan['id'] %>
-        </td>
-      </tr>
-    </table>
-
+  <td colspan="2" style="font-size: 12px; color: #a6a6a6; padding: 0 0 8px 0" >
+    <%= coupon_string(item.discount) %>
+    <%#   <%= item.plan['id'] %>
   </td>
 </tr>
 
