--- a/app/views/digest_mailer/_stat_with_list.erb
+++ b/app/views/digest_mailer/_stat_with_list.erb
@@ -29,7 +29,7 @@
                                   <td width="50%">
                                   </td>
                                   <td width="25px" >
-                                    <span class="card-value chameleon-heading" style="font-family:Helvetica, sans-serif; font-size:36px; line-height:32px; font-weight:100;color:#065d8c;">
+                                    <span class="chameleon-heading" style="font-family:Helvetica, sans-serif; font-size:36px; line-height:32px; font-weight:100;padding-right: 4px; color:#065d8c;">
                                       <%= list[:data].length %>
                                     </span>
                                   </td>
