--- a/app/views/digest_mailer/_customer_list.erb
+++ b/app/views/digest_mailer/_customer_list.erb
@@ -16,13 +16,13 @@
         <%= currency_formatter(item.price_after_discount / 100).html_safe %>
       </div>
     </span>
-    <%# <a href="https://dashboard.stripe.com/customers/<%= item.stripe_customer_id >" style="vertical-align: middle"><%= stripe_icon.html_safe %></a>
   </td>
 </tr>
 
 <tr style="color: #666">
 
   <td colspan="2" style="font-size: 12px; color: #a6a6a6; padding: 0 0 8px 0" >
+    <a href="https://dashboard.stripe.com/customers/<%= item.stripe_customer_id %>" style="vertical-align: middle"><%= stripe_icon.html_safe %></a>
     <%= coupon_string(item.discount) %>
     <%#   <%= item.plan['id'] %>
   </td>
