--- a/app/views/digest_mailer/_stat_with_list.erb
+++ b/app/views/digest_mailer/_stat_with_list.erb
@@ -1,4 +1,4 @@
-<tr id=<%= anchor ||= '' %>>
+<tr>
   <td align="center" class="mp0x5" style="padding: 0 30px;">
     <table align="left" border="0" cellpadding="0" cellspacing="0" width="100%">
       <tbody>
@@ -34,8 +34,8 @@
                                     </span>
                                   </td>
                                   <td width="50%" style="text-align: left; vertical-align: bottom">
-                                    <span class="change <%= change_class(list[:totalValue] ||= '') %>">
-                                      <%= currency_formatter(list[:totalValue] / 100).html_safe %>
+                                    <span class="change <%= change_class(list[:totalValue] ||= '', isPotential ||= false) %>">
+                                      <%= currency_formatter(list[:totalValue] / 100, isPotential ||= false, isPositive ||= true).html_safe %>
                                     </span>
                                   </td>
                                 </tr>
@@ -61,7 +61,7 @@
                                 <tr>
                                   <td>
                                     <table width="100%" style="table-layout: fixed">
-                                      <%= render partial: 'customer_list', collection: list[:data], as: :item %>
+                                      <%= render partial: 'customer_list', collection: list[:data], as: :item, locals: { hideConversionDate: (defined?(hideConversionDate) ? hideConversionDate : false), isPotential: (isPotential ||= false) } %>
                                     </table>
                                   </td>
                                 </tr>
