--- a/app/views/digest_mailer/_block_row.erb
+++ b/app/views/digest_mailer/_block_row.erb
@@ -18,8 +18,8 @@
                                   <td width="45.6667%">
                                     <table border="0" cellpadding="0" cellspacing="0" class="chameleon-line" style="border-radius: 8px; background-color: #fff" width="100%">
                                       <tbody>
-                                        <tr style="height: 120px">
-                                          <td class="card-inner" style="vertical-align: top; padding: 19px 20px 13px;">
+                                        <tr>
+                                          <td class="card-inner">
                                             <%= block1 %>
                                           </td>
                                         </tr>
@@ -30,7 +30,7 @@
                                   <td width="45.6667%">
                                     <table border="0" cellpadding="0" cellspacing="0" class="chameleon-line" style="border-radius: 8px; background-color: #fff" width="100%">
                                       <tbody>
-                                        <tr style="height: 120px">
+                                        <tr>
                                           <td class="card-inner" style="vertical-align: top; padding: 19px 20px 13px;">
                                             <%= block2 %>
                                           </td>
